[tool.poetry]
name = "aura-response"
version = "0.1.0"
description = ""
authors = ["Brian Carroll <brian.carroll@holman.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
