[tool.poetry]
name = "aura-response"
version = "0.1.0"
description = ""
authors = ["Brian Carroll <brian.carroll@holman.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocs-awesome-nav = "^3.1.2"
click = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
